--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,9 @@
 /.idea/modules.xml
 /.idea/workspace.xml
 /.idea/navEditor.xml
+/.idea/gradle.xml
+/.idea/misc.xml
+/.idea/sonarlint/
 /.idea/assetWizardSettings.xml
 .DS_Store
 /build
