--- a/YouTils/build.gradle
+++ b/YouTils/build.gradle
@@ -29,6 +29,14 @@ android {
         jvmTarget = '17'
     }
     namespace 'dev.prabhatpandey.youtils'
+
+    publishing {
+        singleVariant("release") {
+            withSourcesJar()
+            withJavadocJar()
+        }
+    }
+
 }
 
 dependencies {
@@ -41,15 +49,15 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
 
-afterEvaluate {
-    publishing {
-        publications {
-            release(MavenPublication) {
-                from components.release
+publishing {
+    publications {
+        release(MavenPublication) {
+            groupId = 'com.github.prabhatsdp'
+            artifactId = 'youtils'
+            version = '1.0.0'
 
-                groupId = 'com.github.prabhatsdp'
-                artifactId = 'youtils'
-                version = '1.0'
+            afterEvaluate {
+                from components.release
             }
         }
     }
