--- a/YouTils/build.gradle
+++ b/YouTils/build.gradle
@@ -52,9 +52,9 @@ dependencies {
 publishing {
     publications {
         release(MavenPublication) {
-            groupId = 'com.github.prabhatsdp'
+            groupId = 'dev.prabhatpandey.youtils'
             artifactId = 'youtils'
-            version = '1.0.0'
+            version = '1.0.1'
 
             afterEvaluate {
                 from components.release
