--- a/YouTils/build.gradle
+++ b/YouTils/build.gradle
@@ -22,6 +22,9 @@ android {
         }
     }
     compileOptions {
+        // Flag to enable support for the new language APIs
+        coreLibraryDesugaringEnabled true
+
         sourceCompatibility JavaVersion.VERSION_17
         targetCompatibility JavaVersion.VERSION_17
     }
@@ -47,6 +50,11 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+
+    // Desugar Library for LocalDateTime support for lower android versions
+    coreLibraryDesugaring "com.android.tools:desugar_jdk_libs:1.1.5"
+
 }
 
 publishing {
@@ -54,7 +62,7 @@ publishing {
         release(MavenPublication) {
             groupId = 'com.github.prabhatsdp'
             artifactId = 'youtils'
-            version = '1.0.2'
+            version = '1.1.0'
 
             afterEvaluate {
                 from components.release
